--- a/Enunciado_de_tarea.ipynb
+++ b/Enunciado_de_tarea.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Objetivo del código.\n",
     "\n",
-    "El código de este ejercicio tiene por objetivo el de formar un sistema básico de altas de alumnos con los siguiientes campos datos:\n",
+    "El código de este ejercicio tiene por objetivo el de formar un sistema básico de altas de alumnos con los siguientes campos datos:\n",
     "\n",
     "* Nombre.\n",
     "* Primer apellido.\n",
@@ -63,7 +63,7 @@
    "metadata": {},
    "source": [
     "## El paquete *caso_nuevo*.\n",
-    "Este paquete incluye varios módulos que realizarán las actividades descritas, pero los datos son almacenados en el archivo de texto en la ruta local *caso_nuevo/alumnos.txt* como una susesión de líneas en donde cada una de ellas corresponden a un objeto de tipo *dict*."
+    "Este paquete incluye varios módulos que realizarán las actividades descritas, pero los datos son almacenados en el archivo de texto en la ruta local *caso_nuevo/alumnos.txt* como una suseción de líneas en donde cada una de ellas corresponden a un objeto de tipo *dict*."
    ]
   },
   {
