--- a/Enunciado_de_tarea.ipynb
+++ b/Enunciado_de_tarea.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "source": [
     "## El paquete *caso_nuevo*.\n",
-    "Este paquete incluye varios módulos que realizarán las actividades descritas, pero los datos son almacenados en el archivo de texto en la ruta local *caso_nuevo/alumnos.txt* como una suseción de líneas en donde cada una de ellas corresponden a un objeto de tipo *dict*."
+    "Este paquete incluye varios módulos que realizarán las actividades descritas, pero los datos son almacenados en el archivo de texto en la ruta local *caso_nuevo/alumnos.txt* como una sucesión de líneas en donde cada una de ellas corresponden a un objeto de tipo *dict*."
    ]
   },
   {
